# CppCodeTemplate

./: CMakeLists.txt  LICENSE
.devcontainer/: README.md  base.Dockerfile  devcontainer.json
cmake/: PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
